# heir

./: CMakeLists.txt  index.xml
blog/: index.xml
blog/_print/: index.html
docs/: index.xml
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt
lib/Analysis/RotationAnalysis/: CMakeLists.txt
lib/Analysis/SelectVariableNames/: CMakeLists.txt
lib/Analysis/TargetSlotAnalysis/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/ArithExtToArith/: CMakeLists.txt
lib/Conversion/BGVToOpenfhe/: BGVToOpenfhe.cpp  CMakeLists.txt  CMakeLists.txt~
lib/Conversion/BGVToPolynomial/: CMakeLists.txt
lib/Conversion/CGGIToTfheRust/: CMakeLists.txt
lib/Conversion/CGGIToTfheRustBool/: CGGIToTfheRustBool.cpp  CMakeLists.txt
lib/Conversion/CombToCGGI/: CMakeLists.txt  CombToCGGI.cpp
lib/Conversion/PolynomialToStandard/: CMakeLists.txt
lib/Conversion/SecretToBGV/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/ArithExt/: CMakeLists.txt
lib/Dialect/ArithExt/IR/: ArithExtDialect.cpp  ArithExtDialect.h  ArithExtTypes.h  ArithExtTypes.td  BUILD  CMakeLists.txt
lib/Dialect/BGV/: CMakeLists.txt
lib/Dialect/BGV/IR/: BGVDialect.cpp  BGVDialect.h  CMakeLists.txt
lib/Dialect/BGV/Transforms/: CMakeLists.txt
lib/Dialect/CGGI/: CMakeLists.txt
lib/Dialect/CGGI/IR/: BUILD  CGGIAttributes.td  CGGIDialect.cpp  CGGIDialect.h  CGGIEnums.td  CGGIOps.td  CMakeLists.txt
lib/Dialect/CGGI/Transforms/: BooleanVectorizer.cpp  CMakeLists.txt
lib/Dialect/Comb/: CMakeLists.txt
lib/Dialect/Comb/IR/: CMakeLists.txt  CombDialect.cpp  CombDialect.h  CombDialect.td  CombOps.cpp  CombOps.h  CombOps.td
lib/Dialect/Jaxite/: CMakeLists.txt
lib/Dialect/Jaxite/IR/: BUILD  CMakeLists.txt  JaxiteDialect.cpp  JaxiteDialect.h  JaxiteTypes.h
lib/Dialect/LWE/: CMakeLists.txt
lib/Dialect/LWE/IR/: BUILD  CMakeLists.txt  LWEDialect.cpp  LWEDialect.h  LWETypes.h
lib/Dialect/LWE/Transforms/: CMakeLists.txt  SetDefaultParameters.cpp
lib/Dialect/Openfhe/: CMakeLists.txt
lib/Dialect/Openfhe/IR/: BUILD  CMakeLists.txt  OpenfheDialect.cpp  OpenfheDialect.h  OpenfheTypes.h
lib/Dialect/PolyExt/: CMakeLists.txt
lib/Dialect/PolyExt/IR/: BUILD  CMakeLists.txt  PolyExtDialect.cpp  PolyExtDialect.h
lib/Dialect/RNS/: CMakeLists.txt
lib/Dialect/RNS/IR/: BUILD  CMakeLists.txt  RNSDialect.cpp  RNSDialect.h  RNSTypes.h
lib/Dialect/Secret/: CMakeLists.txt
lib/Dialect/Secret/IR/: CMakeLists.txt  SecretDialect.cpp  SecretDialect.h  SecretTypes.h
lib/Dialect/Secret/Transforms/: CMakeLists.txt
lib/Dialect/TensorExt/: CMakeLists.txt
lib/Dialect/TensorExt/IR/: CMakeLists.txt  TensorExtDialect.cpp  TensorExtDialect.h
lib/Dialect/TensorExt/Transforms/: BUILD  CMakeLists.txt  InsertRotate.cpp  Passes.h  Passes.td  SIMDVectorize.cpp  SIMDVectorize.h
lib/Dialect/TfheRust/: CMakeLists.txt
lib/Dialect/TfheRust/IR/: BUILD  CMakeLists.txt  TfheRustDialect.cpp  TfheRustDialect.h  TfheRustTypes.h
lib/Dialect/TfheRustBool/: CMakeLists.txt
lib/Dialect/TfheRustBool/IR/: BUILD  CMakeLists.txt  TfheRustBoolAttributes.td  TfheRustBoolDialect.cpp  TfheRustBoolDialect.h  TfheRustBoolOps.td  TfheRustBoolTypes.h
lib/Graph/: CMakeLists.txt
tests/tensor_ext/: simd_pack.mlir
tools/: CMakeLists.txt  cornami-translate.cpp
