add_subdirectory(ArithExt)
add_subdirectory(Jaxite)
add_subdirectory(PolyExt)
#add_subdirectory(Comb) - requires HEIR interface
#add_subdirectory(TensorExt)
add_subdirectory(LWE)
add_subdirectory(Openfhe)
add_subdirectory(RNS)
add_subdirectory(TfheRust)
add_subdirectory(TfheRustBool)

# IR + Transforms
# BGV
# CGGI
# RNS
# Secret
# TensorExt
